--- a/add.xaml
+++ b/add.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MAG.add"
+﻿<Window x:Class="MAG.Add"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,6 +25,6 @@
                 <Button Content="додати" FontSize="16" Foreground="Black" Background="#FF2EBC3F" HorizontalAlignment="Left" Width="100" FontWeight="Bold" Height="30" Click="Add_Click"></Button>
             </StackPanel>
         </Border>
-        <Button x:Name="Back" Content="Назад" Click="Back_Click" Height="25" Width="70" Margin="10,419,730,10"/>
+        <Button x:Name="Back" Content="Назад" Click="Back_Click" Margin="10,398,722,16"/>
     </Grid>
 </Window>
