--- a/end.xaml
+++ b/end.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MAG.end"
+﻿<Window x:Class="MAG.End"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
