--- a/order.xaml
+++ b/order.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MAG.order"
+﻿<Window x:Class="MAG.Order"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,23 @@
         xmlns:local="clr-namespace:MAG"
         mc:Ignorable="d"
         Title="order" Height="450" Width="800">
-    <Grid>
-  
-            <StackPanel x:Name="ButtonContainer" Orientation="Vertical" Margin="10,10,10,10"/>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+        <Grid  Background="#020a2b">
 
-    </Grid>
+            <TextBlock Text="Модель:" Margin="10,50,587,367" Foreground="White" FontSize="18"></TextBlock>
+            <TextBlock x:Name="model" Text="" Margin="10,79,209,320" Foreground="White" FontSize="18"></TextBlock>
+            <TextBlock Text="Продукт:" Margin="10,126,431,288" Foreground="White" FontSize="18"></TextBlock>
+            <TextBlock x:Name="poduct" TextWrapping="Wrap" Text="" Margin="10,158,172,243" Foreground="White" FontSize="18"></TextBlock>
+            <TextBlock Margin="10,202,587,217" Foreground="White" FontSize="18"><Run Language="uk-ua" Text="Ціна:"/></TextBlock>
+            <TextBlock Text="Номер телефону:" Margin="10,282,587,135" Foreground="White" FontSize="18"></TextBlock>
+            <TextBlock x:Name="Number" Text="" Margin="10,313,209,86" Foreground="White" FontSize="18"></TextBlock>
+            <StackPanel x:Name="ItemsContainer" Margin="10,50,10,50" VerticalAlignment="Top">
+
+            </StackPanel>
+            <TextBlock x:Name="TotalSumTextBlock" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="16" FontWeight="Bold" Margin="685,0,0,64" Foreground="White"/>
+            <Button x:Name="BackButton" Content="Назад" Click="Back_Click" Width="76" Height="30" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="658,0,0,394"/>
+            <Button x:Name="buy" Margin="628,369,46,47" Click="buy_Click" Foreground="Black" Background="#FF1AC31A" Content="Обробити"/>
+            <TextBlock x:Name="price" Text="" Margin="10,232,209,166" Foreground="White" FontSize="18"/>
+        </Grid>
+    </ScrollViewer>
 </Window>
